kubernetes/common/alb/devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: argocd
  labels:
    name: devops-ingress
  annotations:
    # 인터넷 연결 Application Load Balancer 생성
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: alb-02
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    # 80, 443 포트에 대한 리스너 생성
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    # ACM 인증서 ARN을 ALB의 443 포트 리스너와 연결
    alb.ingress.kubernetes.io/certificate-arn: { { ACM ARN } }
    # 모든 HTTP 리스너는 default action으로 HTTPS로 redirect되며, 다른 규칙을 무시한다.
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: { { ArgoCD Domain } } # if you need, change your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-ingress
  namespace: vpa
  labels:
    name: goldilocks-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: alb-02
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: { { ACM ARN } }
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: { { goldilocks domain } } # if you need, change your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
